# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.65 2009/04/24 06:25:34 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.3.5 (2009/??/??)
 - (2009/04/23) Fixed bug# 3495 - Missing ldap disconnects leaves CLOSE_WAIT tcp
    sessions.
 - (2009/04/23) Fixed bug# 3674 - CustomerSearch() doesn't match non-single
    words if they are in the same DB field.
 - (2009/04/23) Fixed bug# 3684 - No search for * in LDAP-CustomerBackend.
 - (2009/04/02) Fixed bug# 3732 - Improved russion translation.
 - (2009/04/01) Fixed bug# 3573 - Deleting tickets on PostgreSQL 8.3.0 failes.
 - (2009/04/01) Fixed bug# 3719 - otrs.checkModules incorrectly parses PDF::API2
    version.
 - (2009/04/01) Fixed bug# 3257 - otrs.checkModules incorrectly states DBD:mysql
    is required.
 - (2009/04/01) Fixed bug# 3739 - Customer can not logon to the Customer
    Interface if ShowAgentOnline is used.
 - (2009/04/01) Fixed bug# 3404 - PendingJobs.pl doesn't unlock the closed
    tickets.
 - (2009/04/01) Fixed bug# 3745 - German umlaut in customer login_id breaks
    login.
 - (2009/03/24) Fixed bug# 3735 - Queue names should be quoted when editing
    queues (In this case if you use them in regular expressions).
 - (2009/02/19) Fixed bug# 3636 - Phone call link can be used without adding
    a body the ticket mask.
 - (2009/02/19) Fixed bug# 3671 - Priority in CustomerTicketZoom resets to
    pre-configured or 3.
 - (2009/02/13) Fixed bug# 3657 - Stats module: The locking attribute doesn't
    work.
 - (2009/02/11) Fixed ticket# 2009020942001554 - generic agent is logging many
    debug infos into log file.
 - (2009/02/09) Fixed bug# 3656 - The package manager testscript doesn't work
    on developer installations.